# internal/delivery/rest/v1/tradecase.go
@@ -18,10 +18,79 @@ type tradecaseRoutes struct {
 	l log.Interface
 }
 
+// @Summary     Add Pairs
+// @Description Add list of pairs to contract tradecase memory
+// @ID          addPairs
+// @Tags  	    tradecase
+// @Accept      json
+// @Produce     json
+// @Param       request body listPairs true "Add pairs"
+// @Success     201 {object} listPairs
+// @Failure     400 {object} responseErr
+// @Router      /contract/pairs [post]
+func (tr *tradecaseRoutes) AddPairs(
+	c *gin.Context,
+) {
+	req := listPairs{
+		Pairs: make([]entities.TradePair, 0),
+	}
+
+	err := c.BindJSON(&req)
+	if err != nil {
+		errorBadRequest(
+			c, err.Error(),
+			Log(
+				tr.l.Error,
+				err,
+				"rest - v1 - AddPairs",
+			),
+		)
+		return
+	}
+
+	err = tr.t.Contract.SetPairs(c, req.Pairs)
+	if err != nil {
+		errorBadRequest(
+			c, err.Error(),
+			Log(
+				tr.l.Error,
+				err,
+				"rest - v1 - AddPairs",
+			),
+		)
+		return
+	}
+
+	respondCreated(c, req)
+}
+
+// @Summary     List Pairs
+// @Description Get full list of pairs from contract tradecase memory
+// @ID          listPairs
+// @Tags  	    tradecase
+// @Accept      json
+// @Produce     json
+// @Success     200 {object} listPairs
+// @Failure     400 {object} responseErr
+// @Failure     404 {object} responseErr
+// @Router      /contract/pairs [get]
+func (tr *tradecaseRoutes) ListPairs(
+	c *gin.Context,
+) {
+	pairLst := listPairs{
+		Pairs: make([]entities.TradePair, 0),
+	}
+
+	pairs := tr.t.Contract.ListPairs(c)
+	pairLst.Pairs = append(pairLst.Pairs, pairs...)
+
+	respondOk(c, pairLst)
+}
+
 // @Summary     Get Pairs
-// @Description Get list of pairs by protocol, tokens
+// @Description Get list of pool pairs from contract tradecase memory by token pair & protocol
 // @ID          getPairs
-// @Tags  	    Contract
+// @Tags  	    tradecase
 // @Accept      json
 // @Produce     json
 // @Param       request body tokenPair true "Get pairs"
@@ -74,109 +143,10 @@ func (tr *tradecaseRoutes) GetPairs(
 	respondOk(c, lst)
 }
 
-// @Summary     List Pairs
-// @Description Get full list of pairs
-// @ID          listPairs
-// @Tags  	    Contract
-// @Accept      json
-// @Produce     json
-// @Success     200 {object} listPairs
-// @Failure     400 {object} responseErr
-// @Failure     404 {object} responseErr
-// @Router      /contract/pairs [get]
-func (tr *tradecaseRoutes) ListPairs(
-	c *gin.Context,
-) {
-	pairLst := listPairs{
-		Pairs: make([]entities.TradePair, 0),
-	}
-
-	pairs := tr.t.Contract.ListPairs(c)
-	pairLst.Pairs = append(pairLst.Pairs, pairs...)
-
-	respondOk(c, pairLst)
-}
-
-// @Summary     Add Pairs
-// @Description Add list of pairs
-// @ID          addPairs
-// @Tags  	    Contract
-// @Accept      json
-// @Produce     json
-// @Param       request body listPairs true "Add pairs"
-// @Success     201 {object} listPairs
-// @Failure     400 {object} responseErr
-// @Router      /contract/pairs [post]
-func (tr *tradecaseRoutes) AddPairs(
-	c *gin.Context,
-) {
-	req := listPairs{
-		Pairs: make([]entities.TradePair, 0),
-	}
-
-	err := c.BindJSON(&req)
-	if err != nil {
-		errorBadRequest(
-			c, err.Error(),
-			Log(
-				tr.l.Error,
-				err,
-				"rest - v1 - AddPairs",
-			),
-		)
-		return
-	}
-
-	err = tr.t.Contract.SetPairs(c, req.Pairs)
-	if err != nil {
-		errorBadRequest(
-			c, err.Error(),
-			Log(
-				tr.l.Error,
-				err,
-				"rest - v1 - AddPairs",
-			),
-		)
-		return
-	}
-
-	respondCreated(c, req)
-}
-
-// @Summary     Get Tokens
-// @Description Request base token list
-// @ID          getTokens
-// @Tags  	    Contract
-// @Accept      json
-// @Produce     json
-// @Success     200 {object} listTokens
-// @Failure     507 {object} responseErr
-// @Router      /contract/tokens/base [get]
-func (tr *tradecaseRoutes) GetBaseTokens(
-	c *gin.Context,
-) {
-	tokens, err := tr.t.Contract.API().GetBaseTokens(
-		eth.CallOpts(),
-	)
-	if err != nil {
-		errorInufficientStorage(
-			c, err.Error(),
-			Log(
-				tr.l.Error,
-				err,
-				"rest - v1 - GetTokens",
-			),
-		)
-		return
-	}
-
-	respondOk(c, tokens)
-}
-
 // @Summary     Add Tokens
 // @Description Add list of tokens
 // @ID          addTokens
-// @Tags  	    Provider
+// @Tags  	    tradecase
 // @Accept      json
 // @Produce     json
 // @Param       request body listTokens true "Add tokens"
@@ -221,7 +191,7 @@ func (tr *tradecaseRoutes) AddTokens(c *gin.Context) {
 // @Summary     List Tokens
 // @Description Request token list
 // @ID          listTokens
-// @Tags  	    Provider
+// @Tags  	    tradecase
 // @Accept      json
 // @Produce     json
 // @Success     200 {object} listTokens
@@ -234,105 +204,46 @@ func (tr *tradecaseRoutes) ListTokens(
 	respondOk(c, tokens)
 }
 
-// @Summary     Load Tokens
-// @Description Load unknown tokens from storage
-// @ID          loadTokens
-// @Tags  	    Trade
+// @Summary     List base Tokens
+// @Description Request base token list from deployed contract memory
+// @ID          getTokens
+// @Tags  	    trade
 // @Accept      json
 // @Produce     json
 // @Success     200 {object} listTokens
-// @Failure     409 {object} responseErr
-// @Router      /trade/tokens [get]
-func (tr *tradecaseRoutes) LoadTokens(
-	c *gin.Context,
-) {
-	err := tr.t.SetTokens(c, "tokens")
-	if err != nil {
-		errorConflict(
-			c, err.Error(),
-			Log(
-				tr.l.Error,
-				err,
-				"rest - v1 - LoadTokens",
-			),
-		)
-		return
-	}
-
-	respondOk(c, tr.t.Provider.ListTokens(c))
-}
-
-// @Summary     Load Pairs
-// @Description Load profitable pairs from storage
-// @ID          loadPairs
-// @Tags  	    Trade
-// @Accept      json
-// @Produce     json
-// @Success     200 {object} listPairs
 // @Failure     507 {object} responseErr
-// @Router      /trade/pairs [get]
-func (tr *tradecaseRoutes) LoadPairs(
+// @Router      /contract/tokens/base [get]
+func (tr *tradecaseRoutes) GetBaseTokens(
 	c *gin.Context,
 ) {
-	err := tr.t.SetProfitablePairs(c, "pools")
+	tokens, err := tr.t.Contract.API().GetBaseTokens(
+		eth.CallOpts(),
+	)
 	if err != nil {
 		errorInufficientStorage(
 			c, err.Error(),
 			Log(
 				tr.l.Error,
 				err,
-				"rest - v1 - LoadPairs",
+				"rest - v1 - GetBaseTokens",
 			),
 		)
 		return
 	}
 
-	respondOk(c, tr.t.Contract.ListPairs(c))
-}
-
-// @Summary     Withdraw
-// @Description Withdraw tokens from contract
-// @ID          withdraw
-// @Tags  	    Trade
-// @Accept      json
-// @Produce     json
-// @Success     202 {object} response
-// @Failure     507 {object} responseErr
-// @Router      /trade/withdraw [get]
-func (tr *tradecaseRoutes) Withdraw(
-	c *gin.Context,
-) {
-
-	ctx, cancel := context.WithCancel(c)
-	defer cancel()
-
-	tx, err := tr.t.Withdraw(ctx)
-	if err != nil {
-		errorInufficientStorage(
-			c, err.Error(),
-			Log(
-				tr.l.Error,
-				err,
-				"rest - v1 - Withdraw",
-			),
-		)
-	}
-
-	res := response{tx}
-
-	respondAccepted(c, res)
+	respondOk(c, tokens)
 }
 
 // @Summary     Add Base Token
 // @Description Add base token to contract
 // @ID          addBase
-// @Tags  	    Trade
+// @Tags  	    trade
 // @Accept      json
 // @Produce     json
 // @Param		token query string true "Add base token"
 // @Success     201 {object} response
 // @Failure     507 {object} responseErr
-// @Router      /trade/token [post]
+// @Router      /trade/tokens/base [post]
 func (tr *tradecaseRoutes) AddBase(
 	c *gin.Context,
 ) {
@@ -364,13 +275,13 @@ func (tr *tradecaseRoutes) AddBase(
 // @Summary     Remove Base Token
 // @Description Remove base token from contract
 // @ID          rmBase
-// @Tags  	    Trade
+// @Tags  	    trade
 // @Accept      json
 // @Produce     json
 // @Param		token query string false "Remove base token"
 // @Success     202 {object} response
 // @Failure     507 {object} responseErr
-// @Router      /trade/token [delete]
+// @Router      /trade/tokens/base [delete]
 func (tr *tradecaseRoutes) RmBase(
 	c *gin.Context,
 ) {
@@ -400,6 +311,95 @@ func (tr *tradecaseRoutes) RmBase(
 	respondAccepted(c, res)
 }
 
+// @Summary     Load Tokens
+// @Description Load unknown tokens from storage
+// @ID          loadTokens
+// @Tags  	    trade
+// @Accept      json
+// @Produce     json
+// @Success     200 {object} listTokens
+// @Failure     409 {object} responseErr
+// @Router      /trade/tokens [get]
+func (tr *tradecaseRoutes) LoadTokens(
+	c *gin.Context,
+) {
+	err := tr.t.SetTokens(c, "tokens")
+	if err != nil {
+		errorConflict(
+			c, err.Error(),
+			Log(
+				tr.l.Error,
+				err,
+				"rest - v1 - LoadTokens",
+			),
+		)
+		return
+	}
+
+	respondOk(c, tr.t.Provider.ListTokens(c))
+}
+
+// @Summary     Load Pairs
+// @Description Load profitable pool pairs from storage
+// @ID          loadPairs
+// @Tags  	    trade
+// @Accept      json
+// @Produce     json
+// @Success     200 {object} listPairs
+// @Failure     507 {object} responseErr
+// @Router      /trade/pairs [get]
+func (tr *tradecaseRoutes) LoadPairs(
+	c *gin.Context,
+) {
+	err := tr.t.SetProfitablePairs(c, "pools")
+	if err != nil {
+		errorInufficientStorage(
+			c, err.Error(),
+			Log(
+				tr.l.Error,
+				err,
+				"rest - v1 - LoadPairs",
+			),
+		)
+		return
+	}
+
+	respondOk(c, tr.t.Contract.ListPairs(c))
+}
+
+// @Summary     Withdraw
+// @Description Withdraw tokens from contract
+// @ID          withdraw
+// @Tags  	    trade
+// @Accept      json
+// @Produce     json
+// @Success     202 {object} response
+// @Failure     507 {object} responseErr
+// @Router      /trade/core/withdraw [get]
+func (tr *tradecaseRoutes) Withdraw(
+	c *gin.Context,
+) {
+
+	ctx, cancel := context.WithCancel(c)
+	defer cancel()
+
+	tx, err := tr.t.Withdraw(ctx)
+	if err != nil {
+		errorInufficientStorage(
+			c, err.Error(),
+			Log(
+				tr.l.Error,
+				err,
+				"rest - v1 - Withdraw",
+			),
+		)
+	}
+
+	res := response{tx}
+
+	respondAccepted(c, res)
+}
+
 func NewTradecaseRouter(
 	h *gin.RouterGroup,
 	t tc.TradeCase,
@@ -407,8 +407,8 @@ func NewTradecaseRouter(
 ) {
 	routes := &tradecaseRoutes{t, l}
 
-	NewContractRouter(h, *routes)
 	NewProviderRouter(h, *routes)
+	NewContractRouter(h, *routes)
 	NewTradeRouter(h, *routes)
 }
 
@@ -416,15 +416,23 @@ func NewContractRouter(
 	h *gin.RouterGroup,
 	tr tradecaseRoutes,
 ) {
-	handler := h.Group("provider")
+	handler := h.Group("contract")
 	{
+		handler.POST(
+			"/pairs",
+			tr.AddPairs,
+		)
 		handler.GET(
-			"/tokens",
-			tr.ListTokens,
+			"/pairs",
+			tr.ListPairs,
 		)
 		handler.POST(
-			"/tokens",
-			tr.AddTokens,
+			"/pairs/find",
+			tr.GetPairs,
+		)
+		handler.GET(
+			"/tokens/base",
+			tr.GetBaseTokens,
 		)
 	}
 }
@@ -433,23 +441,15 @@ func NewProviderRouter(
 	h *gin.RouterGroup,
 	tr tradecaseRoutes,
 ) {
-	handler := h.Group("contract")
+	handler := h.Group("provider")
 	{
 		handler.POST(
-			"/pairs/find",
-			tr.GetPairs,
+			"/tokens",
+			tr.AddTokens,
 		)
 		handler.GET(
-			"/pairs",
-			tr.ListPairs,
-		)
-		handler.POST(
-			"/pairs",
-			tr.AddPairs,
-		)
-		handler.GET(
-			"/tokens/base",
-			tr.GetBaseTokens,
+			"/tokens",
+			tr.ListTokens,
 		)
 	}
 }
@@ -460,6 +460,14 @@ func NewTradeRouter(
 ) {
 	handler := h.Group("trade")
 	{
+		handler.POST(
+			"/tokens/base",
+			tr.AddBase,
+		)
+		handler.DELETE(
+			"/tokens/base",
+			tr.RmBase,
+		)
 		handler.GET(
 			"/tokens",
 			tr.LoadTokens,
@@ -469,16 +477,8 @@ func NewTradeRouter(
 			tr.LoadPairs,
 		)
 		handler.GET(
-			"/withdraw",
+			"/core/withdraw",
 			tr.Withdraw,
-		)
-		handler.POST(
-			"/token",
-			tr.AddBase,
-		)
-		handler.DELETE(
-			"/token",
-			tr.RmBase,
 		)
 	}
 }
